Deploiement for local test